# wikibase-spreadsheet

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.mjs  tsconfig.json  vite.config.ts
client/: package-lock.json  vite.config.ts
docker/: .env  LocalSettings.php  docker-compose.extra.yml  docker-compose.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
server/: main.py
src/: App.tsx  ControlsBar.tsx  ExportDialog.tsx  Login.tsx  MainPage.tsx  TableEditor.tsx  UploadDialog.tsx  csv.ts  hooks.ts  index.css  localTable.ts  main.tsx  structure.ts  tableContent.ts  uploadTasks.ts  util.ts  wikibase.ts
src/csv/: DelimiterMenu.tsx  ExportDialog.tsx  ImportDialog.tsx  MappingPicker.tsx  hooks.ts  index.ts  io.ts
src/structurepanel/: ChooseInstanceProp.tsx  CreateEntityDialog.tsx  EntitySearch.tsx  ItemSearch.tsx  NamedItem.tsx  SortableList.tsx  StructurePanel.tsx  index.ts
src/wikibase/: errors.ts  index.ts  sparql.ts
