[project]
name = "wikibase-spreadsheet"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "snorkysnark", email = "snorkysnark@gmail.com"},
]
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
